--- a/kubernetes/deployment/postgres.yaml
+++ b/kubernetes/deployment/postgres.yaml
@@ -49,7 +49,7 @@ spec:
     spec:
       containers:
       - name: schoolhub-postgres
-        image: postgres
+        image: postgres:13.3
         env:
         - name: POSTGRES_DB
           valueFrom:
