--- a/kubernetes/deployment/postgres.yaml
+++ b/kubernetes/deployment/postgres.yaml
@@ -82,7 +82,7 @@ spec:
                "-c", "ssl_key_file=/etc/postgresql/ssl/privkey.pem"]
       initContainers:
       - name: volume-mount-hack
-        image: busybox
+        image: busybox:1.33
         command: ["sh", "-c"]
         args: ["cp /secret/* /etc/postgresql/ssl/;
                 chown -R 999:999 /etc/postgresql/ssl/privkey.pem"]
