attempt to fix haproxy router regex

--- a/haproxy/haproxy_router.cfg
+++ b/haproxy/haproxy_router.cfg
@@ -14,12 +14,14 @@ frontend router-in
     http-request redirect scheme https code 301
 
 frontend router-in_ssl
-    bind *:* ssl crt /etc/cert/live/joined_cert.pem
+    bind *:1443 ssl crt /etc/cert/live/joined_cert.pem
+    bind *:1285 ssl crt /etc/cert/live/joined_cert.pem
+    bind *:1280
     http-request add-header X-Forwarded-Proto https if { ssl_fc }
     default_backend router_ssl
 
-backend phoenix_ssl
-    reqrep ^([\w]* )([\w]+\:\/\/)([\w\.]+)\/([\w\-\.]+)\/(.*) \1\2\4\/\5
+backend router_ssl
+    http-request replace-uri (\w+\:\/\/)([\w\.]+)(\:\d+)?\/([\w\-\.]+)\/(.*) \1\4\3\/\5
     #server phoenix_server phx-server:4001 check ssl ca-file /etc/cert/selfsigned/chain.pem
 
 
