add logs to haproxy

--- a/haproxy/haproxy_instance.cfg
+++ b/haproxy/haproxy_instance.cfg
@@ -1,5 +1,6 @@
 global
     maxconn 256
+    log stdout format raw local0
 
 defaults
     mode http
@@ -7,6 +8,8 @@ defaults
     timeout connect 5s
     timeout client 24h
     timeout server 60m
+    log global
+    log-format "[%t] %ci:%cp -> %fi:%fp/%f -> %bi:%bp/%b -> %si:%sp/%s"
 
 
 frontend phoenix-in
