router haproxy now reaches instances, just no SSL

--- a/haproxy/haproxy_router.cfg
+++ b/haproxy/haproxy_router.cfg
@@ -1,5 +1,6 @@
 global
     maxconn 256
+    log stdout format raw local0
 
 defaults
     mode http
@@ -7,6 +8,12 @@ defaults
     timeout connect 5s
     timeout client 24h
     timeout server 60m
+    log global
+    log-format "[%t] %ci:%cp -> %fi:%fp/%f -> %bi:%bp/%b -> %si:%sp/%s ; %H %r [%[var(txn.instance_ip)]] [%[var(txn.newdomain)]]"
+
+resolvers internal-dns
+    nameserver kubernetes 10.43.0.10:53
+    accepted_payload_size 8192
 
 
 frontend router-in
@@ -17,12 +24,25 @@ frontend router-in_ssl
     bind *:1443 ssl crt /etc/cert/live/joined_cert.pem
     bind *:1285 ssl crt /etc/cert/live/joined_cert.pem
     bind *:1280
+    
     http-request add-header X-Forwarded-Proto https if { ssl_fc }
+    
+    http-request set-var(txn.newdomain) path,field(2,/)
+    http-request do-resolve(txn.instance_ip,internal-dns,ipv4) var(txn.newdomain)
+    http-request capture var(txn.instance_ip) len 256
+    http-request deny if { var(txn.instance_ip) -m ip 127.0.0.0/8 }
+    http-request set-dst var(txn.instance_ip)
+    http-request replace-path \/([\w\-\.]+)(.*) \2
+    
+    use_backend not-found unless { var(txn.instance_ip) -m found }
     default_backend router_ssl
 
+backend not-found
+    ## dummy, returns 503
+    
 backend router_ssl
-    http-request replace-uri (\w+\:\/\/)([\w\.]+)(\:\d+)?\/([\w\-\.]+)\/(.*) \1\4\3\/\5
     #server phoenix_server phx-server:4001 check ssl ca-file /etc/cert/selfsigned/chain.pem
+    server clear 0.0.0.0:0
 
 
 frontend stats
