fix ssh in routing, missing js and image recovery

--- a/haproxy/haproxy_router.cfg
+++ b/haproxy/haproxy_router.cfg
@@ -42,7 +42,7 @@ backend not-found
     
 backend router_ssl
     #server phoenix_server phx-server:4001 check ssl ca-file /etc/cert/selfsigned/chain.pem
-    server clear 0.0.0.0:0
+    server clear 0.0.0.0:0 ssl ca-file /etc/cert/selfsigned/chain.pem
 
 
 frontend stats
