add internal host in header

--- a/haproxy/haproxy_router.cfg
+++ b/haproxy/haproxy_router.cfg
@@ -25,12 +25,13 @@ frontend router-in_ssl
     bind *:1285 ssl crt /etc/cert/live/joined_cert.pem
     bind *:1280
     
-    http-request add-header X-Forwarded-Proto https if { ssl_fc }
+    http-request set-header X-Forwarded-Proto https if { ssl_fc }
     
     http-request set-var(txn.newdomain) path,field(2,/)
     http-request do-resolve(txn.instance_ip,internal-dns,ipv4) var(txn.newdomain)
     http-request capture var(txn.instance_ip) len 256
     http-request deny if { var(txn.instance_ip) -m ip 127.0.0.0/8 }
+    http-request set-header X-Internal-Host %[var(txn.newdomain)]
     http-request set-dst var(txn.instance_ip)
     http-request replace-path \/([\w\-\.]+)(.*) \2
     
