cosmetic change: rename haproxy mongooseim_bosh backend so it's not the same

--- a/haproxy/haproxy_instance.cfg
+++ b/haproxy/haproxy_instance.cfg
@@ -49,8 +49,8 @@ frontend xmpp-bosh-in_ssl
 backend mongooseim-bosh_ssl
     mode tcp
     option independent-streams
-    server mongooseim1 localhost:5285 check ssl ca-file /etc/cert/selfsigned/chain.pem
-    #server mongooseim2 mongooseim-2:5285 check ssl ca-file /etc/cert/selfsigned/chain.pem
+    server mongooseim1-wss localhost:5285 check ssl ca-file /etc/cert/selfsigned/chain.pem
+    #server mongooseim2-wss mongooseim-2:5285 check ssl ca-file /etc/cert/selfsigned/chain.pem
 
 
 frontend stats
