fix kubernetes instance local network

--- a/haproxy/haproxy_instance.cfg
+++ b/haproxy/haproxy_instance.cfg
@@ -22,7 +22,7 @@ frontend phoenix-in_ssl
     default_backend phoenix_ssl
 
 backend phoenix_ssl
-    server phoenix_server localhost:4001 check ssl ca-file /etc/cert/selfsigned/chain.pem
+    server phoenix_server 127.0.0.1:4001 check ssl ca-file /etc/cert/selfsigned/chain.pem
 
 
 frontend xmpp-in
@@ -33,7 +33,7 @@ frontend xmpp-in
 backend mongooseim
     mode tcp
     option independent-streams
-    server mongooseim1 localhost:5222 check send-proxy ssl ca-file /etc/cert/selfsigned/chain.pem
+    server mongooseim1 127.0.0.1:5222 check send-proxy ssl ca-file /etc/cert/selfsigned/chain.pem
     #server mongooseim2 mongooseim-2:5222 check send-proxy ssl ca-file /etc/cert/selfsigned/chain.pem
 
 frontend xmpp-bosh-in
@@ -49,7 +49,7 @@ frontend xmpp-bosh-in_ssl
 backend mongooseim-bosh_ssl
     mode tcp
     option independent-streams
-    server mongooseim1-wss localhost:5285 check ssl ca-file /etc/cert/selfsigned/chain.pem
+    server mongooseim1-wss 127.0.0.1:5285 check ssl ca-file /etc/cert/selfsigned/chain.pem
     #server mongooseim2-wss mongooseim-2:5285 check ssl ca-file /etc/cert/selfsigned/chain.pem
 
 
