--- a/kubernetes/headless/nfs.yaml
+++ b/kubernetes/headless/nfs.yaml
@@ -6,14 +6,26 @@ metadata:
     app: nfs-server
 spec:
   ports:
-  - name: 2049-2049
-    nodePort: 32049
+  - name: 2049-tcp
     port: 2049
     protocol: TCP
-    targetPort: 2049
+  - name: 111-tcp
+    port: 111
+    protocol: TCP
+  - name: 20048-tcp
+    port: 20048
+    protocol: TCP
+  - name: 2049-udp
+    port: 2049
+    protocol: UDP
+  - name: 111-udp
+    port: 111
+    protocol: UDP
+  - name: 20048-udp
+    port: 20048
+    protocol: UDP
   selector:
     app: nfs-server
-  type: NodePort
   
 ---
 
@@ -49,23 +61,36 @@ spec:
     spec:
       containers:
       - name: nfs-server
-        image: itsthenetwork/nfs-server-alpine
+        image: cpuguy83/nfs-server
         env:
         - name: SHARED_DIRECTORY
-          value: /nfsshare
+          value: /exports
         ports:
         - containerPort: 2049
-          name: nfs
-        - containerPort: 20048
-          name: moundt
+          name: nfs-tcp
+          protocol: TCP
+        - containerPort: 2049
+          name: nfs-udp
+          protocol: UDP
         - containerPort: 111
-          name: rpcbind
-        volumeMounts:
-        - name: nfs-data-pv
-          mountPath: /nfsshare
+          name: rpcbind-tcp
+          protocol: TCP
+        - containerPort: 111
+          name: rpcbind-udp
+          protocol: UDP
+        - containerPort: 20048
+          name: mountd-tcp
+          protocol: TCP
+        - containerPort: 20048
+          name: mountd-udp
+          protocol: UDP
+        #volumeMounts:
+        #- name: nfs-data-pv
+        #  mountPath: /exports
         securityContext:
           privileged: true
-      volumes:
-      - name: nfs-data-pv
-        persistentVolumeClaim:
-          claimName: nfs-pvc
+        args: ["/exports"]
+      #volumes:
+      #- name: nfs-data-pv
+      #  persistentVolumeClaim:
+      #    claimName: nfs-pvc
