--- a/mongooseim/member/mongooseim.cfg
+++ b/mongooseim/member/mongooseim.cfg
@@ -93,7 +93,7 @@
 %% You can define one or several, for example:
 %% {hosts, ["example.net", "example.com", "example.org"]}.
 %%
-{hosts, ["localhost", "%DOMAIN%", "mongooseim", "haproxy"] }.
+{hosts, ["localhost", "%DOMAIN%", "haproxy", "mongooseim", "mongooseim-1"] }.
 
 %%
 %% route_subdomains: Delegate subdomains to other XMPP servers.
