haproxy router targeting router or instances

--- a/haproxy/haproxy_router.cfg
+++ b/haproxy/haproxy_router.cfg
@@ -26,6 +26,11 @@ frontend router-in_ssl
     bind *:1280
     
     http-request set-header X-Forwarded-Proto https if { ssl_fc }
+
+    acl is_root path -i /
+    acl is_router path_beg /router
+
+    http-request redirect code 301 location https://%[hdr(host)]/router/ if is_root
     
     http-request set-var(txn.newdomain) path,field(2,/)
     http-request do-resolve(txn.instance_ip,internal-dns,ipv4) var(txn.newdomain)
@@ -34,16 +39,21 @@ frontend router-in_ssl
     http-request set-header X-Internal-Host %[var(txn.newdomain)]
     http-request set-dst var(txn.instance_ip)
     http-request replace-path \/([\w\-\.]+)(.*) \2
+
+    use_backend router_phoenix_ssl if is_router
     
     use_backend not-found unless { var(txn.instance_ip) -m found }
-    default_backend router_ssl
+    default_backend instance_ssl
 
 backend not-found
     ## dummy, returns 503
     
-backend router_ssl
+backend instance_ssl
     #server phoenix_server phx-server:4001 check ssl ca-file /etc/cert/selfsigned/chain.pem
     server clear 0.0.0.0:0 ssl ca-file /etc/cert/selfsigned/chain.pem
+
+backend router_phoenix_ssl
+    server router_phoenix_server phx-server:4001 check ssl ca-file /etc/cert/selfsigned/chain.pem
 
 
 frontend stats
