implement router services in kubernetes

--- a/haproxy/haproxy_router.cfg
+++ b/haproxy/haproxy_router.cfg
@@ -36,9 +36,9 @@ frontend router-in_ssl
     http-request do-resolve(txn.instance_ip,internal-dns,ipv4) var(txn.newdomain)
     http-request capture var(txn.instance_ip) len 256
     http-request deny if { var(txn.instance_ip) -m ip 127.0.0.0/8 }
-    http-request set-header X-Internal-Host %[var(txn.newdomain)]
-    http-request set-dst var(txn.instance_ip)
-    http-request replace-path \/([\w\-\.]+)(.*) \2
+    http-request set-header X-Internal-Host %[var(txn.newdomain)] if !is_router
+    http-request set-dst var(txn.instance_ip) if !is_router
+    http-request replace-path \/([\w\-\.]+)(.*) \2 if !is_router
 
     use_backend router_phoenix_ssl if is_router
     
@@ -49,7 +49,6 @@ backend not-found
     ## dummy, returns 503
     
 backend instance_ssl
-    #server phoenix_server phx-server:4001 check ssl ca-file /etc/cert/selfsigned/chain.pem
     server clear 0.0.0.0:0 ssl ca-file /etc/cert/selfsigned/chain.pem
 
 backend router_phoenix_ssl
