fix router haproxy js + images

--- a/haproxy/haproxy_router.cfg
+++ b/haproxy/haproxy_router.cfg
@@ -28,7 +28,7 @@ frontend router-in_ssl
     http-request set-header X-Forwarded-Proto https if { ssl_fc }
 
     acl is_root path -i /
-    acl is_router path_beg /router
+    acl is_router path_beg /router /js /images
 
     http-request redirect code 301 location https://%[hdr(host)]/router/ if is_root
     
