deny proxy route to admin_pw endpoint (only accessible from within the network)

--- a/haproxy/haproxy_router.cfg
+++ b/haproxy/haproxy_router.cfg
@@ -28,9 +28,11 @@ frontend router-in_ssl
     http-request set-header X-Forwarded-Proto https if { ssl_fc }
 
     acl is_root path -i /
-    acl is_router path_beg /router /js /images
+    acl is_router path_beg /router /js /css /images
+    acl is_pw_request path_beg /router/admin_pw
 
     http-request redirect code 301 location https://%[hdr(host)]/router/ if is_root
+    http-request deny if is_pw_request
     
     http-request set-var(txn.newdomain) path,field(2,/)
     http-request do-resolve(txn.instance_ip,internal-dns,ipv4) var(txn.newdomain)
