fix javascript files not loading

--- a/haproxy/haproxy_router.cfg
+++ b/haproxy/haproxy_router.cfg
@@ -28,7 +28,6 @@ frontend router-in_ssl
     http-request set-header X-Forwarded-Proto https if { ssl_fc }
 
     acl is_root path -i /
-    acl is_router path_beg /router /js /css /images
     acl is_pw_request path_beg /router/admin_pw
 
     http-request redirect code 301 location https://%[hdr(host)]/router/ if is_root
@@ -38,17 +37,15 @@ frontend router-in_ssl
     http-request do-resolve(txn.instance_ip,internal-dns,ipv4) var(txn.newdomain)
     http-request capture var(txn.instance_ip) len 256
     http-request deny if { var(txn.instance_ip) -m ip 127.0.0.0/8 }
-    http-request set-header X-Internal-Host %[var(txn.newdomain)] if !is_router
-    http-request set-dst var(txn.instance_ip) if !is_router
-    http-request replace-path \/([\w\-\.]+)(.*) \2 if !is_router
 
-    use_backend router_phoenix_ssl if is_router
+    acl is_instance var(txn.instance_ip) -m found
     
-    use_backend not-found unless { var(txn.instance_ip) -m found }
-    default_backend instance_ssl
+    http-request set-header X-Internal-Host %[var(txn.newdomain)] if is_instance
+    http-request set-dst var(txn.instance_ip) if is_instance
+    http-request replace-path \/([\w\-\.]+)(.*) \2 if is_instance
 
-backend not-found
-    ## dummy, returns 503
+    use_backend instance_ssl if is_instance
+    default_backend router_phoenix_ssl
     
 backend instance_ssl
     server clear 0.0.0.0:0 ssl ca-file /etc/cert/selfsigned/chain.pem
