--- a/schoolhub/assets/package.json
+++ b/schoolhub/assets/package.json
@@ -28,6 +28,7 @@
     "sass-loader": "^8.0.2",
     "terser-webpack-plugin": "^2.3.2",
     "webpack": "4.41.5",
-    "webpack-cli": "^3.3.2"
+    "webpack-cli": "^3.3.2",
+    "path-parse": ">=1.0.7"
   }
 }
