proxy blocks manual access of database endpoints

--- a/haproxy/haproxy_router.cfg
+++ b/haproxy/haproxy_router.cfg
@@ -29,6 +29,7 @@ frontend router-in_ssl
 
     acl is_root path -i /
     acl is_pw_request path_beg /router/admin_pw
+    acl is_db_request path_beg /database
 
     http-request redirect code 301 location https://%[hdr(host)]/router/ if is_root
     http-request deny if is_pw_request
@@ -43,6 +44,8 @@ frontend router-in_ssl
     http-request set-header X-Internal-Host %[var(txn.newdomain)] if is_instance
     http-request set-dst var(txn.instance_ip) if is_instance
     http-request replace-path \/([\w\-\.]+)(.*) \2 if is_instance
+
+    http-request deny if is_db_request
 
     use_backend instance_ssl if is_instance
     default_backend router_phoenix_ssl
