implement mailjet api to send email instead of postfix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -108,6 +108,8 @@ services:
     environment:
       - MIX_ENV=prod
       - DOMAIN=$DOMAIN
+      - EMAIL_USE_API=true
+      - MAILJET_CREDS="dummy:dummy"
     env_file:
       - ./postgres/postgres_single.env
       
