--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -109,7 +109,7 @@ services:
       - MIX_ENV=prod
       - DOMAIN=$DOMAIN
       - EMAIL_USE_API=true
-      - MAILJET_CREDS="dummy:dummy"
+      - MAILJET_CREDS=dummy:dummy
     env_file:
       - ./postgres/postgres_single.env
       
