load admin pw as secret into router in kubernetes

--- a/kubernetes/headless/router_phoenix.yaml
+++ b/kubernetes/headless/router_phoenix.yaml
@@ -76,6 +76,11 @@ spec:
             configMapKeyRef:
               name: domain-address
               key: DOMAIN
+        - name: ADMIN_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: admin-password
+              key: admin_pw.secret
         - name: POSTGRES_DB
           valueFrom:
             secretKeyRef:
