routing haproxy stats

--- a/haproxy/haproxy_router.cfg
+++ b/haproxy/haproxy_router.cfg
@@ -59,6 +59,24 @@ backend router_phoenix_ssl
 
 frontend stats
     bind *:1404
+    http-request set-var(txn.newdomain) path,field(2,/)
+    http-request do-resolve(txn.instance_ip,internal-dns,ipv4) var(txn.newdomain)
+    http-request capture var(txn.instance_ip) len 256
+    http-request deny if { var(txn.instance_ip) -m ip 127.0.0.0/8 }
+
+    acl is_instance var(txn.instance_ip) -m found
+    
+    http-request set-header X-Internal-Host %[var(txn.newdomain)] if is_instance
+    http-request set-dst var(txn.instance_ip) if is_instance
+    http-request replace-path \/([\w\-\.]+)(.*) \2 if is_instance
+
+    use_backend instance if is_instance
+    default_backend stats_router
+
+backend instance
+    server clear 0.0.0.0:0
+    
+backend stats_router
     stats enable
     stats uri /stats
     stats refresh 10s
