--- a/docker-compose_router_test.yml
+++ b/docker-compose_router_test.yml
@@ -88,9 +88,9 @@ services:
     container_name: schoolhub_router_stripe
     image: stripemock/stripe-mock:v0.110.0
     hostname: stripe-mock
-    expose:
-      - "12111"
-      - "12112"
+    ports:
+      - "12111:12111"
+      - "12112:12112"
     networks:
       - schoolhub_router_network
     restart: on-failure
