apply k8s mock to docker-compose setup of router phx

--- a/docker-compose_router_test.yml
+++ b/docker-compose_router_test.yml
@@ -80,6 +80,7 @@ services:
     environment:
       - MIX_ENV=prod
       - DOMAIN=$DOMAIN
+      - MOCK_K8S=true
     env_file:
       - ./postgres/postgres_router.env
 
