single server haproxy redirect if www

--- a/haproxy/haproxy_single.cfg
+++ b/haproxy/haproxy_single.cfg
@@ -19,6 +19,7 @@ frontend phoenix-in
 frontend phoenix-in_ssl
     bind *:1443 ssl crt /etc/cert/live/joined_cert.pem
     http-request add-header X-Forwarded-Proto https if { ssl_fc }
+    http-request redirect prefix https://%[hdr(host),regsub(^www\.,,i)] code 301 if { hdr_beg(host) -i www. }
     default_backend phoenix_ssl
 
 backend phoenix_ssl
